--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRr_NbEpDsKu3G58ocvMKqyAXR3Evtx9zBAog&usqp=CAU" alt="background">
             <article>
                 <h1>Oscar Moore</h1>
-                <h3>Frontend Software Developer</h3>
+                <h3>Web Devloper| Engineer</h3>
             </article>
         </header>
         <aside class="contacts">
