--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,21 +18,21 @@
     <div class="container">
         <!-- start of navigation bar -->
 
+        <div class="top">
+            <ul class="navtabs">
+                <li>Home</li>
+                <li>About</li>
+                <li>Resume</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+
+
         <div class="nav"
             style="background-image: url(https://img.freepik.com/free-photo/starry-night-sky_1048-11828.jpg?size=626&ext=jpg&ga=GA1.1.1826414947.1700179200&semt=ais)">
-            <div class="navleft">
-                <img src="logo.png" alt="">
-            </div>
 
-            <div class="navright">
-                <ul class="navtabs">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Portfolio</li>
-                    <li>Contact</li>
-                </ul>
 
-            </div>
+
         </div>
 
         <!-- start of title -->
@@ -51,14 +51,25 @@
                 <img src="C:\Users\Ohjay\OneDrive\Documents\my profile-pic.jpg" alt="pic">
             </div>
             <div class="right">
-                <p>I'm passionate about learning, transparency, and collaboration. After starting my career as a writer,
-                    I discovered I love programming because it perfectly blends my problem-solving and creative
-                    strengths.
-                    I recently graduated from Dev Bootcamp's 1,000-plus hour programming apprenticeship where I learned
-                    Ruby, JavaScript, Rails, the MEAN stack other other technologies. I'm currently seeking job
-                    opportunities in San Francisco or the East Bay.
-                    In my free time, I'm crazy about riding bikes, music, reading and the exploring the Bay Area.</p>
+                <p>I'm passionate about learning, transparency, and collaboration. After starting my career in banking,
+                    I discovered I love programming because it perfectly blends my problem-solving skills, creative
+                    strengths and leadership abilities.
+                    I recently graduated from 2 Dev Bootcamp's 1,000-plus hour programming apprenticeship where I
+                    learned
+                    Ruby, JavaScript, Rails, the MEAN stack other other technologies.
+                    In my free time, I love to play basketball, ride bikes and watch sports on tv.</p>
             </div>
+
+        </div>
+        <!-- End of About me section -->
+
+
+        <!--Start of Resume section -->
+
+        <div class="resume"
+            style="background-image: url(https://img.freepik.com/free-photo/starry-night-sky_1048-11828.jpg?size=626&ext=jpg&ga=GA1.1.1826414947.1700179200&semt=ais)">
+            <div class="resumeleft"></div>
+            <div class="resume_right"></div>
 
         </div>
 
