--- a/Portfolio/new-resume/MY Portfolio/index.html
+++ b/Portfolio/new-resume/MY Portfolio/index.html
@@ -27,12 +27,40 @@
         </div>
     </div>
     <div class="main" style="background-image: url('images/yellowblack.jpg');">
+        <!-- start of info box section -->
 
         <div class="infobox">
+            <h1>Oscar Moore</h1>
+            <h2>Web Devloper| Engineer</h2>
             <div class="aboutme">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam optio doloremque dolorem molestias
-                    tempore consequatur cum reprehenderit rem voluptate veniam quam exercitationem voluptatibus culpa
-                    iure eligendi, laboriosam quasi ipsa similique!</p>
+                <img src="C:\Users\Ohjay\OneDrive\Documents\my profile-pic.jpg" alt="pic">
+
+                <p>I'm passionate about learning, transparency, and collaboration. After starting my career in banking,
+                    I discovered I love programming because it perfectly blends my problem-solving skills, creative
+                    strengths and leadership abilities.
+                    I recently graduated from 2 Dev Bootcamp's 1,000-plus hour programming apprenticeship where I
+                    learned
+                    Ruby, JavaScript, Rails, the MEAN stack other other technologies.
+                    In my free time, I love to play basketball, ride bikes and watch sports on tv.</p>
+            </div>
+
+            <div class="skills">
+                <h2>My Skills</h2>
+                <div class="myskills">
+                    <div class="skill1">
+                        <h3>Full-Stack Development</h3>
+                        <p>It's important to me to be a well rounded developer. Some of the tools in my toolbox are:
+                            Ruby on Rails, Node.js, Express, AngularJS, React, MongoDB, HTML, CSS, Git, GitHub, Heroku,
+                            and Bootstrap.</p>
+                    </div>
+                    <div class="skill2">
+                        <h3>User Experience</h3>
+                        <p>I am constantly seeking new ways to improve the way a user interacts with my designs. It's
+                            easy for me to put myself in the users' position and build applications from their
+                            perspective.</p>
+                    </div>
+                    <div class="skill3"></div>
+                </div>
             </div>
 
         </div>
