--- a/Portfolio/new-resume/MY Portfolio/index.html
+++ b/Portfolio/new-resume/MY Portfolio/index.html
@@ -46,6 +46,7 @@
 
             <div class="skills">
                 <h2>My Skills</h2>
+                <h3>Some of my most noticeable skills:</h3>
                 <div class="myskills">
                     <div class="skill1">
                         <h3>Full-Stack Development</h3>
@@ -59,9 +60,23 @@
                             easy for me to put myself in the users' position and build applications from their
                             perspective.</p>
                     </div>
-                    <div class="skill3"></div>
+                    <div class="skill3">
+                        <h3>Working with Others</h3>
+                        <p>Collaborating on projects is one of my favorite things to do. I am easy to get along with and
+                            can make the best out of any situation. I have a lot of energy and enthusiasm which is often
+                            contagious!</p>
+                    </div>
                 </div>
             </div>
+            <!-- End of skill section -->
+
+            <!-- Start of project Section -->
+            <div class="myprojects">
+                <h2>Some of my Projects</h2>
+                
+            </div>
+
+
 
         </div>
     </div>
