--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Oscar Moore</h1>
             <h2>Web Devloper| Engineer</h2>
             <div class="aboutme">
-                <img src="C:\Users\Ohjay\OneDrive\Documents\my profile-pic.jpg" alt="pic">
+                <img src="images/" alt="pic">
 
                 <p>I'm passionate about learning, transparency, and collaboration. After starting my career in banking,
                     I discovered I love programming because it perfectly blends my problem-solving skills, creative
