--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     </div>
                     <div class="skill3">
                         <h3>Working with Others</h3>
+                        <img src="images/powerbutton.jpg" alt="">
                         <p>Collaborating on projects is one of my favorite things to do. I am easy to get along with and
                             can make the best out of any situation. I have a lot of energy and enthusiasm which is often
                             contagious!</p>
