--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="skill3">
                         <h3>Working with Others</h3>
-                        <img src="images/powerbutton.jpg" alt="">
+                
                         <p>Collaborating on projects is one of my favorite things to do. I am easy to get along with and
                             can make the best out of any situation. I have a lot of energy and enthusiasm which is often
                             contagious!</p>
@@ -74,6 +74,12 @@
             <!-- Start of project Section -->
             <div class="myprojects">
                 <h2>Some of my Projects</h2>
+                <div class="proj1">
+                    <img  class="resume-pic" src="C:\Users\Ohjay\OneDrive\Documents\Resume-pic.png" alt="">
+                    <a href="https://ohjay33.github.io/My_Resume/">My Resume</a>
+                </div>
+                <div class="proj2"></div>
+                <div class="proj3"></div>
                 
             </div>
 
