--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="myprojects">
                 <h2>Some of my Projects</h2>
                 <div class="proj1">
-                    <!-- <img  class="resume-pic" src="C:\Users\Ohjay\OneDrive\Documents\Resume-pic.png" alt=""> -->
-                    <!-- <a href="https://ohjay33.github.io/My_Resume/">My Resume:</a> -->
+                    <img  class="resume-pic" src="C:\Users\Ohjay\OneDrive\Documents\Resume-pic.png" alt="">
+                    <a href="https://ohjay33.github.io/My_Resume/">My Resume:</a>
                 </div>
                 <div class="proj2"></div>
                 <div class="proj3"></div>
