--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
             <img class="instagram" src="images/Instagram-logo-005.jpg" alt="">
         </div>
     </div>
-    <div class="main" style="background-image: url('images/yellowblack.jpg');">
+    <div class="main">
         <!-- start of info box section -->
+        <div class="infobox" style="background-image: url('images/yellowblack.jpg');">
 
-        <div class="infobox">
+
             <h1>Oscar Moore</h1>
             <h2>Web Devloper| Engineer</h2>
             <div class="aboutme">
                 <img src="Portfolio/mypics/images/my-profile-pic.jpg" alt="pic">
 
-                <p>I'm passionate about learning, transparency, and collaboration. After starting my career in banking,
+                <p>I'm passionate about learning, transparency, and collaboration. After starting my career in
+                    banking,
                     I discovered I love programming because it perfectly blends my problem-solving skills, creative
                     strengths and leadership abilities.
                     I recently graduated from 2 Dev Bootcamp's 1,000-plus hour programming apprenticeship where I
@@ -43,6 +45,10 @@
                     Ruby, JavaScript, Rails, the MEAN stack other other technologies.
                     In my free time, I love to play basketball, ride bikes and watch sports on tv.</p>
             </div>
+        </div>
+
+        <div class="skillbox">
+
 
             <div class="skills">
                 <h2>My Skills</h2>
@@ -62,30 +68,37 @@
                     </div>
                     <div class="skill3">
                         <h3>Working with Others</h3>
-                
+
                         <p>Collaborating on projects is one of my favorite things to do. I am easy to get along with and
                             can make the best out of any situation. I have a lot of energy and enthusiasm which is often
                             contagious!</p>
                     </div>
                 </div>
             </div>
-            <!-- End of skill section -->
+        </div>..
 
-            <!-- Start of project Section -->
+
+        <!-- End of skill section -->
+
+        <!-- Start of project Section -->
+        <div class="projectbox" style="background-image: url('images/yellowblack.jpg');">
+
+
             <div class="myprojects">
                 <h2>Some of my Projects</h2>
                 <div class="proj1">
-                    <img  class="resume-pic" src="images/resume-pic.png" alt="">
+                    <img class="resume-pic" src="images/resume-pic.png" alt="">
                     <a href="https://ohjay33.github.io/My_Resume/">My Resume:</a>
                 </div>
                 <div class="proj2"></div>
                 <div class="proj3"></div>
-                
+
             </div>
-
-
-
         </div>
+
+
+
+
     </div>
     <script src="algo.js"></script>
 </body>
