--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
 
         </div>
         <div class="pictures">
-            <img class="github" src="images/github.jpg" alt="">
-            <img class="instagram" src="images/Instagram-logo-005.jpg" alt="">
+            <a href="https://github.com/Ohjay33"><img class="github" src="images/github.jpg"
+                    alt=""></a>
+
+           <a href="www.ohjaymoore@gmail.com"> <img class="Email" src="images/mail-pic.png" alt=""></a>
+
+            <a href="https://www.linkedin.com/in/oscar-moore-415699193/"><img class="linkedin" src="linkedin-logo.jpg" alt=""></a>
         </div>
     </div>
     <div class="main">
         <!-- start of info box section -->
-        <div class="infobox" style="background-image: url('images/yellowblack.jpg');">
+        <div class="infobox" style="background-image: url('white-background.webp');">
 
 
             <h1>Oscar Moore</h1>
@@ -36,14 +40,14 @@
             <div class="aboutme">
                 <img src="Portfolio/mypics/images/my-profile-pic.jpg" alt="pic">
 
-                <p>I'm passionate about learning, transparency, and collaboration. After starting my career in
+                <p>I'm passionate about learning, transparency, and collaboration. After starting my career in IT and
                     banking,
                     I discovered I love programming because it perfectly blends my problem-solving skills, creative
                     strengths and leadership abilities.
                     I recently graduated from 2 Dev Bootcamp's 1,000-plus hour programming apprenticeship where I
                     learned
-                    Ruby, JavaScript, Rails, the MEAN stack other other technologies.
-                    In my free time, I love to play basketball, ride bikes and watch sports on tv.</p>
+                    Html, CSS, Python, Java, Ruby, JavaScript, Rails, MEAN and other technologies.
+                    In my free time, I love to play basketball, ride bikes and watch sports.</p>
             </div>
         </div>
 
@@ -81,7 +85,7 @@
         <!-- End of skill section -->
 
         <!-- Start of project Section -->
-        <div class="projectbox" style="background-image: url('images/yellowblack.jpg');">
+        <div class="projectbox" style="background-image: url('white-background.webp');">
 
 
             <div class="myprojects">
