--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
         </div>
         <div class="pictures">
-            <a href="https://github.com/Ohjay33"><img class="github" src="images/github.jpg"
+            <a href="https://github.com/Ohjay33"><img class="github" src="images/github.jpg" alt=""></a>
+
+            <a href="www.ohjaymoore@gmail.com"> <img class="Email" src="images/mail-pic.png" alt=""></a>
+
+            <a href="https://www.linkedin.com/in/oscar-moore-415699193/"><img class="linkedin" src="linkedin-logo.jpg"
                     alt=""></a>
-
-           <a href="www.ohjaymoore@gmail.com"> <img class="Email" src="images/mail-pic.png" alt=""></a>
-
-            <a href="https://www.linkedin.com/in/oscar-moore-415699193/"><img class="linkedin" src="linkedin-logo.jpg" alt=""></a>
         </div>
     </div>
     <div class="main">
@@ -62,6 +62,7 @@
                         <h3>Full-Stack Development</h3>
                         <p>It's important to me to be a well rounded developer. Some of the tools in my toolbox are:
                             Ruby on Rails, Node.js, Express, AngularJS, React, MongoDB, HTML, CSS, Git, GitHub, Heroku,
+                            Javascript, Java, Python
                             and Bootstrap.</p>
                     </div>
                     <div class="skill2">
@@ -99,6 +100,31 @@
 
             </div>
         </div>
+
+        <!-- Start of Contact section -->
+        <div class="contact-section">
+            <h2>Contact Me</h2>
+            <form action="" id="contact-form">
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname" ><br>
+
+                <label for="lname">Last name:</label><br>
+                <input type="text" id="lname" name="lname" ><br><br>
+
+                <label for="email">Email Address:</label><br>
+                <input type="text" id="email" name="email" ><br><br>
+
+                <label for="subject">Subject:</label><br>
+                <input type="text" id="subject-input" name="subject" ><br><br>
+
+                <label for="lname">Message:</label><br>
+                <input type="text" id="message-input" name="message" ><br><br>
+
+
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        
 
 
 
