--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@
             <button class="btn contact">Contact</button>
 
         </div>
-        <div class="pictures">
-            <a href="https://github.com/Ohjay33"><img class="github" src="images/github.jpg" alt=""></a>
 
-            <a href="www.ohjaymoore@gmail.com"> <img class="Email" src="images/mail-pic.png" alt=""></a>
-
-            <a href="https://www.linkedin.com/in/oscar-moore-415699193/"><img class="linkedin" src="linkedin-logo.jpg"
-                    alt=""></a>
-        </div>
     </div>
     <div class="main">
         <!-- start of info box section -->
@@ -93,8 +86,8 @@
                 <h2>Some of my Projects</h2>
                 <div class="proj1">
                     <img class="resume-pic" src="images/resume-pic.png" alt="">
-                    <a href="https://ohjay33.github.io/My_Resume/">My Resume:</a>
                 </div>
+               <a href="https://ohjay33.github.io/My_Resume/">My Resume:</a>
                 <div class="proj2"></div>
                 <div class="proj3"></div>
 
@@ -104,33 +97,28 @@
         <!-- Start of Contact section -->
         <div class="contact-section">
             <h2>Contact Me</h2>
-            <form action="" id="contact-form">
-                <label for="fname">First name:</label><br>
-                <input type="text" id="fname" name="fname" ><br>
+            <div class="contact-logo">
+                <div class="logos">
+                    <a href="www.linkedin.com/in/oscar-moore-415699193">
+                        <img src="images/3d-link-logo2.webp" alt="linkedin" id="link-logo">
+                    </a>
+                    <a href="https://github.com/Ohjay33">
+                        <img src="images/3d-github-logo.png" alt="Github" id="github-logo">
+                    </a>
+                    <a href="www.ohjaymoore@gmail.com">
+                        <img src="images/3d-email-logo.jpg" alt="Email" id="mail-logo">
+                    </a>
+                </div>
+            </div>
 
-                <label for="lname">Last name:</label><br>
-                <input type="text" id="lname" name="lname" ><br><br>
-
-                <label for="email">Email Address:</label><br>
-                <input type="text" id="email" name="email" ><br><br>
-
-                <label for="subject">Subject:</label><br>
-                <input type="text" id="subject-input" name="subject" ><br><br>
-
-                <label for="lname">Message:</label><br>
-                <input type="text" id="message-input" name="message" ><br><br>
-
-
-                <input type="submit" value="Submit">
-            </form>
         </div>
-        
+
 
 
 
 
     </div>
-    <script src="algo.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
