--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styl.css">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cherry Cream Soda">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Patrick Hand SC">
+
 <title>My Website</title>
 </head>
 
@@ -29,7 +32,7 @@
 
 
             <h1>Oscar Moore</h1>
-            <h2>Web Devloper| Engineer</h2>
+            <h2>Web Devloper / Engineer</h2>
             <div class="aboutme">
                 <img src="Portfolio/mypics/images/my-profile-pic.jpg" alt="pic">
 
@@ -82,14 +85,37 @@
         <div class="projectbox" style="background-image: url('white-background.webp');">
 
 
-            <div class="myprojects">
-                <h2>Some of my Projects</h2>
+            <h2>Some of my Projects</h2>
+            <div class="grow">
                 <div class="proj1">
-                    <img class="resume-pic" src="images/resume-pic.png" alt="">
+                    <a href="https://ohjay33.github.io/My_Resume/">
+                        <img class="proj-pic" src="images/resume-pic.png" alt="">
+                    </a>
                 </div>
-               <a href="https://ohjay33.github.io/My_Resume/">My Resume:</a>
-                <div class="proj2"></div>
-                <div class="proj3"></div>
+                <div class="proj2">
+                    <a href="https://ohjay33.github.io/ColorCanvas/">
+                        <img class="proj-pic" src="images/color-Canvas2.png" alt="">
+                    </a>
+                </div>
+
+                <div class="proj3">
+                    <a href="https://ohjay33.github.io/ColorChange/">
+                        <img class="proj-pic" src="images/colorChange.png" alt="">
+                    </a>
+                </div>
+
+                <div class="proj4">
+                    <a href="https://ohjay33.github.io/MakeDeal/">
+                        <img class="proj-pic" src="images/MakeDeal.png" alt="">
+                    </a>
+                </div>
+
+                <div class="proj5">
+                    <a href="https://ohjay33.github.io/SecretMessege/">
+                        <img class="proj-pic" src="images/Secret-message.png" alt="">
+                    </a>
+
+                </div>
 
             </div>
         </div>
