--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
 <body>
 
     <div class="topbar">
+        <div class="shadow">
+            <a href="index.html">
+                <img class="face" src="images/face.jpg" alt="">
 
-        <img class="face" src="images/face.jpg" alt="">
+            </a>
+
+        </div>
+
         <div class="buttons">
             <button class="btn About">About Me</button>
             <button class="btn skills">My Skills</button>
