--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
         <div class="projectbox" style="background-image: url('white-background.webp');">
 
 
-            <h2>Some of my Projects</h2>
+            <h2>Here is a list of a few of my Projects</h2>
+            <h2 id="theList">
+                <a href="https://ohjay33.github.io/theList/">Project List</a>
+            </h2>
             <div class="grow">
                 <div class="proj1">
                     <a href="https://ohjay33.github.io/My_Resume/">
